src/test/deca/syntax/valid/created/class_multiple_extends_with_methods.deca
class A{
	int methA(){}
}
class B extends A{
	int methB(){}
}

class C extends B{
	int methB(){}
}

{

}
