src/test/deca/syntax/invalid/created/faux19.deca
class A{
	public int methA(){

	}
}

{}
